--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/BBTools.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=C:\\Users\\wcarrasco\\Downloads\\jdatechooser_bin_doc_1_1_1\\jdatechooser_bin_doc_1_1_1\\lib\\DateChooser.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=bbtools.BBTools
+main.class=bbtools.gui
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
