--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BBTools
+application.vendor=wcarrasco
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/BBTools.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.client-combined-3.0.0-beta4-nodeps.jar=C:\\Users\\wcarrasco\\Downloads\\selenium-java-3.0.0-beta4\\client-combined-3.0.0-beta4-nodeps.jar
 file.reference.DateChooser.jar=C:\\Users\\wcarrasco\\Downloads\\jdatechooser_bin_doc_1_1_1\\jdatechooser_bin_doc_1_1_1\\lib\\DateChooser.jar
+file.reference.opencsv-3.6.jar=opencsv-3.6.jar
+file.reference.selenium-server-standalone-3.0.0-beta4.jar=C:\\Users\\wcarrasco\\Downloads\\selenium-server-standalone-3.0.0-beta4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.client-combined-3.0.0-beta4-nodeps.jar}:\
+    ${file.reference.selenium-server-standalone-3.0.0-beta4.jar}:\
+    ${file.reference.opencsv-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
