Ya publica los anuncios y continua el ciclo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.client-combined-3.0.0-beta4-nodeps.jar}:\
     ${file.reference.selenium-server-standalone-3.0.0-beta4.jar}:\
-    ${file.reference.opencsv-3.6.jar}
+    ${file.reference.opencsv-3.6.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
